// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (1/3) 1`] = `
Object {
  "bar": Object {
    "i": 7,
  },
  "foo": Object {
    "e": 4,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (1/3) 2`] = `
Object {
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (1/3) 3`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (1/3) 4`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (1/3) 5`] = `
Object {
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (1/3) 6`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (2/3) 1`] = `
Object {
  "bar": Object {
    "i": 7,
  },
  "foo": Object {
    "e": 4,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (2/3) 2`] = `
Object {
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (2/3) 3`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (2/3) 4`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (2/3) 5`] = `
Object {
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (2/3) 6`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (3/3) 1`] = `
Object {
  "bar": Object {
    "i": 7,
  },
  "foo": Object {
    "e": 4,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (3/3) 2`] = `
Object {
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (3/3) 3`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (3/3) 4`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": undefined,
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (3/3) 5`] = `
Object {
  "bar": Object {
    "i": 7,
    "j": 8,
    "k": 9,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`MapCache Cache writeFragment will write some deeply nested data into the store at any id (3/3) 6`] = `
Object {
  "bar": Object {
    "i": 10,
    "j": 11,
    "k": 12,
  },
  "foo": Object {
    "e": 4,
    "f": 5,
    "g": 6,
    "h": Object {
      "generated": false,
      "id": "bar",
      "type": "id",
      "typename": "Bar",
    },
  },
}
`;

exports[`MapCache writing to the store throws when trying to write an object without id that was previously queried with id 1`] = `
"Error writing result to store for query:
 {\\"kind\\":\\"Document\\",\\"definitions\\":[{\\"kind\\":\\"OperationDefinition\\",\\"operation\\":\\"query\\",\\"name\\":{\\"kind\\":\\"Name\\",\\"value\\":\\"Failure\\"},\\"variableDefinitions\\":[],\\"directives\\":[],\\"selectionSet\\":{\\"kind\\":\\"SelectionSet\\",\\"selections\\":[{\\"kind\\":\\"Field\\",\\"name\\":{\\"kind\\":\\"Name\\",\\"value\\":\\"item\\"},\\"arguments\\":[],\\"directives\\":[],\\"selectionSet\\":{\\"kind\\":\\"SelectionSet\\",\\"selections\\":[{\\"kind\\":\\"Field\\",\\"name\\":{\\"kind\\":\\"Name\\",\\"value\\":\\"stringField\\"},\\"arguments\\":[],\\"directives\\":[]}]}}]}}],\\"loc\\":{\\"start\\":0,\\"end\\":106}}
Store error: the application attempted to write an object with no provided id but the store already contains an id of abcd for this object. The selectionSet that was trying to be written is:
{\\"kind\\":\\"Field\\",\\"name\\":{\\"kind\\":\\"Name\\",\\"value\\":\\"item\\"},\\"arguments\\":[],\\"directives\\":[],\\"selectionSet\\":{\\"kind\\":\\"SelectionSet\\",\\"selections\\":[{\\"kind\\":\\"Field\\",\\"name\\":{\\"kind\\":\\"Name\\",\\"value\\":\\"stringField\\"},\\"arguments\\":[],\\"directives\\":[]}]}}"
`;
